--- a/biome.json
+++ b/biome.json
@@ -1,48 +1,48 @@
 {
-	"$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
-	"vcs": {
-		"enabled": false,
-		"clientKind": "git",
-		"useIgnoreFile": false,
-		"defaultBranch": "main"
-	},
-	"files": {
-		"ignoreUnknown": true,
-		"includes": ["**", "!node_modules", "!dist"]
-	},
-	"formatter": {
-		"enabled": true,
-		"indentStyle": "tab",
-		"indentWidth": 2,
-		"lineEnding": "lf",
-		"lineWidth": 150,
-		"attributePosition": "multiline"
-	},
-	"linter": {
-		"enabled": true,
-		"domains": {
-			"next": "recommended",
-			"react": "recommended"
-		},
-		"rules": {
-			"recommended": true
-		}
-	},
+  "$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
+  "vcs": {
+    "enabled": false,
+    "clientKind": "git",
+    "useIgnoreFile": false,
+    "defaultBranch": "main"
+  },
+  "files": {
+    "ignoreUnknown": true,
+    "includes": ["**", "!node_modules", "!dist"]
+  },
+  "formatter": {
+    "enabled": true,
+    "indentStyle": "space",
+    "indentWidth": 2,
+    "lineEnding": "lf",
+    "lineWidth": 150,
+    "attributePosition": "multiline"
+  },
+  "linter": {
+    "enabled": true,
+    "domains": {
+      "next": "recommended",
+      "react": "recommended"
+    },
+    "rules": {
+      "recommended": true
+    }
+  },
 
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "double",
-			"bracketSpacing": true,
-			"bracketSameLine": true
-		}
-	},
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "double",
+      "bracketSpacing": true,
+      "bracketSameLine": true
+    }
+  },
 
-	"assist": {
-		"enabled": true,
-		"actions": {
-			"source": {
-				"organizeImports": "off"
-			}
-		}
-	}
+  "assist": {
+    "enabled": true,
+    "actions": {
+      "source": {
+        "organizeImports": "off"
+      }
+    }
+  }
 }
