--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "sh ./scripts/build.sh",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf dist coverage",
     "lint": "biome check",
     "format": "biome format --write .",
     "tscheck": "sh ./scripts/tscheck.sh",
     "postinstall": "lefthook install",
-    "prepublish": "sh ./scripts/build.sh",
-    "publish": "release-it",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "prepublish": "jest --coverage && sh ./scripts/build.sh",
+    "publish": "release-it"
   },
   "author": "Lumen Sinthetic",
   "license": "MIT",
